fix agent current-zone update for auto-assignment
